--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style/bootstrap/bootstrap.css">
+    <link rel="stylesheet" href="style/style.css">
 
     <script src="node_modules/systemjs/dist/system.src.js"></script>
-
     <script src="node_modules/es6-shim/es6-shim.min.js"></script>
-
     <script src="node_modules/incremental-dom/dist/incremental-dom.js"></script>
 
     <script>
