--- a/unit-tests.html
+++ b/unit-tests.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="content-type" content="text/html;charset=utf-8">
-    <title>Bloxorz-Angular2 Unit Tests</title>
+    <title>Todo SAM Incremental DOM Unit Tests</title>
     <link rel="stylesheet" href="node_modules/jasmine-core/lib/jasmine-core/jasmine.css">
     <script src="node_modules/jasmine-core/lib/jasmine-core/jasmine.js"></script>
     <script src="node_modules/jasmine-core/lib/jasmine-core/jasmine-html.js"></script>
@@ -35,7 +35,8 @@
         };
     });
     Promise.all([
-                System.import("output/model/model.spec")
+                System.import("output/model/model.spec"),
+                System.import("output/model/Todos.spec")
     ])
             .then(window.onload)
             .catch(console.error.bind(console));
