--- a/unit-tests.html
+++ b/unit-tests.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="content-type" content="text/html;charset=utf-8">
-    <title>Todo SAM Incremental DOM Unit Tests</title>
+    <title>Todo SAM Unit Tests</title>
     <link rel="stylesheet" href="node_modules/jasmine-core/lib/jasmine-core/jasmine.css">
     <script src="node_modules/jasmine-core/lib/jasmine-core/jasmine.js"></script>
     <script src="node_modules/jasmine-core/lib/jasmine-core/jasmine-html.js"></script>
